--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 	<head>
-		<title>Page Title</title>
+		<meta charset="utf-8">
+		
+		
+		
+		<title>Τάβλι</title>
+		
+		<!-- Bootstrap core CSS -->
+		<link href="bootstrap/bootstrap.min.css" rel="stylesheet">
+		<!-- <link href="css/mychess.css" rel="stylesheet"> -->
+		<script src="bootstrap/jquery-3.2.1.min.js"></script>
+		<script src="bootstrap/bootstrap.min.js"></script>
+		<!-- <script src="js/mychess.js"></script> -->
+		<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
+		<link href="jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet">
+		
 	</head>
 
 	<body>
 
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
+		<h1>Τάβλι</h1>
+		
+		<!-- <p>This is a paragraph.</p> -->
 
 	</body>
 </html> 
