--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
 		
 		<title>Τάβλι</title>
 		
 		<!-- Bootstrap core CSS -->
 		<link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-		<!-- <link href="css/mychess.css" rel="stylesheet"> -->
+		<!-- <link href="css/mytabli.css" rel="stylesheet"> -->
 		<script src="bootstrap/jquery-3.2.1.min.js"></script>
 		<script src="bootstrap/bootstrap.min.js"></script>
-		<!-- <script src="js/mychess.js"></script> -->
+		<!-- <script src="js/mytabli.js"></script> -->
 		<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
 		<link href="jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet">
 		
