Add mytabli.css, mytabli.js

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		
 		<!-- Bootstrap core CSS -->
 		<link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-		<!-- <link href="css/mytabli.css" rel="stylesheet"> -->
+		<link href="css/mytabli.css" rel="stylesheet">
 		<script src="bootstrap/jquery-3.2.1.min.js"></script>
 		<script src="bootstrap/bootstrap.min.js"></script>
-		<!-- <script src="js/mytabli.js"></script> -->
+		<script src="js/mytabli.js"></script>
 		<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
 		<link href="jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet">
 		
@@ -23,8 +23,7 @@
 	<body>
 
 		<h1>Τάβλι</h1>
-		
-		<!-- <p>This is a paragraph.</p> -->
-
+			<div id="board">
+			
 	</body>
 </html> 
