--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
 	<body>
 
 		<h1>Τάβλι</h1>
-			<div id="board">
-			
+		<div id="board">
+		</div>
+		<br/>
+		
+		<div id='game_initializer'>
+			<input id='username'>
+			<select id='pcolor'>
+				<option value='W'>W</option>
+				<option value='B'>B</option>
+			</select>
+			<button id='login' class='btn btn-primary'>ΕΙΣΟΔΟΣ ΣΤΟ ΠΑΙΧΝΙΔΙ</button><br>
+		</div>
+		<!-- <div id='game_info'>
+		</div> -->
+		
 	</body>
-</html> 
+</html>
